# glb-viewer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
assets/: blob.stl  torus.stl
glb-viewer/: CMakeLists.txt  glb-viewer.cpp
include/: main.h  parser.h  shader.h  texture.h
include/glad/: glad.h
shaders/: fragment.glsl
src/: engine.cpp  engine.hpp  glad.c  main.c  main.cpp  main.h  main.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  parser.c  shader.c  shaders.c  shaders.cpp  shaders.h  shaders.hpp  texture.c
src/shaders/: fragment.glsl
